Update template extraction logic