@@ -6,24 +6,21 @@ import java.util.List;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
+import com.mjkrt.rendr.entity.helper.DataDirection;
+
 public class DataTemplateTest {
     
     private static DataTemplate generateMock() {
-        DataHeader headerOne = new DataHeader(1, DataDirection.HORIZONTAL, "header1", 0);
-        DataHeader headerTwo = new DataHeader(2, DataDirection.HORIZONTAL, "header2", 1);
-        DataHeader headerThree = new DataHeader(3, DataDirection.VERTICAL, "header3", 0);
+        DataContainer containerOne = new DataContainer(1, DataDirection.HORIZONTAL, "slotA", 0, 1);
+        DataContainer containerTwo = new DataContainer(3, DataDirection.VERTICAL, "slotB", 30, 50);
         
-        DataTable tableOne = new DataTable(1, 10, 15);
-        DataTable tableTwo = new DataTable(2, 0, 5);
-        tableOne.addDataHeader(headerOne);
-        tableOne.addDataHeader(headerTwo);
-        tableTwo.addDataHeader(headerThree);
-        
+        DataTable tableOne = new DataTable(1);
+        tableOne.setDataContainers(Arrays.asList(containerOne, containerTwo));
         DataSheet sheetOne = new DataSheet(1, "sheet1", 0);
-        sheetOne.setDataTable(Arrays.asList(tableOne, tableTwo));
+        sheetOne.setDataTables(List.of(tableOne));
         
         DataTemplate templateOnce = new DataTemplate(1, "template1");
-        templateOnce.setDataSheet(List.of(sheetOne));
+        templateOnce.setDataSheets(List.of(sheetOne));
         return templateOnce;
     }
     
@@ -39,10 +36,9 @@ public class DataTemplateTest {
     public void equals_isFalse_noStackOverflowError() {
         DataTemplate templateOne = generateMock();
         DataTemplate templateTwo = generateMock();
-        templateTwo.getDataSheet().get(0)
-                .getDataTable().get(0)
-                .getDataHeader().get(0)
-                .setHeaderName("Different Header"); // modify the lowest level
+        templateTwo.getDataSheets().get(0)
+                .getDataTables().get(0)
+                .setTableId(3); // modify the lowest level
         Assertions.assertNotEquals(templateOne, templateTwo);
     }
 
